Closed Bug 466568 Opened 17 years ago Closed 17 years ago

Double-clicking a word before an input doesn't select it anymore

Categories

(Core :: DOM: Selection, defect, P2)

defect

Tracking

()

VERIFIED FIXED
mozilla1.9.1b3

People

(Reporter: martijn.martijn, Assigned: uriber)

References

Details

(Keywords: regression, testcase, verified1.9.1)

Attachments

(3 files)

Attached file testcase
This works in Firefox 2, but not anymore in Firefox 3. If wanted, I can look for a regression range. Double-clicking the word 'text' in the testcase doesn't select it anymore, which normally happens when you double-click some word.
Tentatively taking.
Assignee: nobody → uriber
OS: Windows XP → All
Hardware: PC → All
This is technically a regression from bug 372086, although all that did was to expose the fact that the selection endpoint here is inside the input field (which is wrong, of course).
Blocks: 372086
Attached patch patchSplinter Review
Don't drill down into scrollframes when iterating frames, when we're not allowed to break out of them.
Attachment #350584 - Flags: review?(roc)
We probably should have some sort of test here.
Flags: blocking1.9.1? → blocking1.9.1+
Priority: -- → P3
Attached file testcase2
It seems to me the patch fixes this case too.
Uri, do you want me to check this in for you or will you do it?
I would have checked it in now, but the tree is red/orange, and I'm not sure when my next chance will be. So please go ahead and do it for me if you can. Thanks.
Pushed to trunk as b4d430ba7b2e, thanks!
Status: NEW → RESOLVED
Closed: 17 years ago
Flags: in-testsuite?
Keywords: checkin-needed
Resolution: --- → FIXED
Whiteboard: [needs landing] → [needs 191 landing]
Pushed to 1.9.1 as 645d9ef6f1a6
Keywords: fixed1.9.1
Whiteboard: [needs 191 landing]
Target Milestone: --- → mozilla1.9.1b3
Verified fixed, using: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.2a1pre) Gecko/20081218 Minefield/3.2a1pre
Status: RESOLVED → VERIFIED
verified FIXED on 1.9.1 build: Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.9.1.2pre) Gecko/20090723 Shiretoko/3.5.2pre (.NET CLR 3.5.30729) ID:20090723050841
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: