Bug 466568. Don't traverse into scrollable frames if we're not allowed to traverse out of them. r+sr=roc